Project

General

Profile

Actions

Bug #12487

closed

-12345.digits(7) behavior

Bug #12487: -12345.digits(7) behavior

Added by znz (Kazuhiro NISHIYAMA) over 10 years ago. Updated about 10 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.4.0dev (2016-06-15 trunk 55416) [x86_64-linux]
[ruby-core:76025]

Description

rdoc of Integer#digits says -12345.digits(7) #=> [4, 6, 6, 0, 5], but it raises Math::DomainError: out of domain.
Which is expected behavior?

Actions

Also available in: PDF Atom