numeric.c: fix doc of Integer#digits [ci skip]

* numeric.c: [DOC] fix rdoc directive, and an example of negative
  value.  [ruby-core:76025] [Bug #12487]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55418 b2dd03c8-39d4-4d8f-98ff-823fe69b080e